--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/interndashboard/interndashboard.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/interndashboard/interndashboard.component.html
@@ -37,7 +37,7 @@
               style="font-size: 35px;" alt="Logout" (click)="logout()" title="Logout"></i>
           </div> -->
           <li id="Add_Mentor"><button type="button"
-            class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded mt-5"
+            class="bg-red-600 hover:bg-red-700 text-white font-bold py-2 px-4 rounded mt-5"
             (click)="logout()">Logout</button></li>
         </div>
       </div>
