--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/list/list.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/list/list.component.html
@@ -1,4 +1,5 @@
 <app-headers></app-headers>
+<!-- <main class="bg-slate-300"> -->
 <nav aria-label="breadcrumb" class="mt-4">
   <ol class="breadcrumb">
     <li class="breadcrumb-item  active"><a (click)="navigateTo()">Home</a></li>
@@ -61,3 +62,4 @@
   </div>
   <span class="m-4"></span>
 </div>
+<!-- </main> -->
