--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentordashboard/mentordashboard.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentordashboard/mentordashboard.component.html
@@ -58,35 +58,47 @@
 
     <h2 class="text-2xl font-bold mb-4 mt-4">Incoming Request</h2>
 
-    <table class="min-w-full text-center">
-      <thead>
-        <tr class="bg-slate-700 text-center text-lg">
-          <th scope="col" class="py-4 px-4 text-white">Intern ID</th>
-          <th scope="col" class="py-4 px-4 text-white">Full Name</th>
-          <th scope="col" class="py-4 px-4 text-white">End Date</th>
-          <th scope="col" class="py-4 px-4 text-white">Association</th>
-          <th scope="col" class="py-4 px-4 text-white">Uploads</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let request of incomingRequests">
-          <td class="py-4 px-4">{{ request.id }}</td>
-          <td class="py-4 px-4">{{ request.fullname }}</td>
-          <td class="py-4 px-4">{{ request.endDate }}</td>
-          <td class="py-4 px-4">{{ request.association }}</td>
-          <td class="py-4 px-4">
-            <ul *ngIf="request.files && request.files.length > 0">
-              <li *ngFor="let file of request.files">
-                <a href="javascript:void(0)" (click)="downloadFile(file.fileName)">
-                  {{ file.fileName }}
-                </a>
-              </li>
-            </ul>
-            <span *ngIf="!request.files || request.files.length === 0">No files uploaded</span>
-          </td>
-        </tr>
-      </tbody>
-    </table>
+    <div class="container mx-auto mt-4 px-4">
+      <div id="table-div" class="bg-white rounded-xl shadow-lg overflow-x-auto">
+        <table class="min-w-full text-center">
+          <thead>
+            <tr class="bg-slate-700 text-center text-lg">
+              <th scope="col" class="py-4 px-4 text-white">Intern ID</th>
+              <th scope="col" class="py-4 px-4 text-white">Full Name</th>
+              <th scope="col" class="py-4 px-4 text-white">End Date</th>
+              <th scope="col" class="py-4 px-4 text-white">Association</th>
+              <th scope="col" class="py-4 px-4 text-white">Uploads</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr *ngFor="let request of incomingRequests" id="list-hover" class="text-center font-bold">
+              <td class="py-3 px-4 cursor-pointer">{{ request.id }}</td>
+              <td class="py-3 px-4 hover:font-bold cursor-pointer">{{ request.fullname }}</td>
+              <td class="py-3 px-4">{{ request.endDate }}</td>
+              <td class="py-3 px-4">{{ request.association }}</td>
+              <td class="py-2 px-4">
+                <ul *ngIf="request.files && request.files.length > 0" class="flex flex-col items-start space-y-2">
+                  <li *ngFor="let file of request.files" class="flex items-center space-x-2">
+                    <svg class="w-5 h-5 text-blue-500 cursor-pointer hover:text-blue-700 transition"
+                         fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"
+                         xmlns="http://www.w3.org/2000/svg" (click)="downloadFile(file.fileName)">
+                      <path stroke-linecap="round" stroke-linejoin="round" d="M12 4v12m8-4l-8 8-8-8"></path>
+                    </svg>
+                    <a href="javascript:void(0)" class="text-black-600 hover:underline" (click)="downloadFile(file.fileName)">
+                      {{ file.fileName }}
+                    </a>
+                  </li>
+                </ul>
+                <span *ngIf="!request.files || request.files.length === 0">No files uploaded</span>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </div>
+    
+    
+    
     
     
     
