--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentorsignup/mentorsignup.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/mentorsignup/mentorsignup.component.html
@@ -23,7 +23,7 @@
         </div>
         <div class="input-group mb-2">
           <input type="email" formControlName="mentoremail" placeholder="Enter your registered Email"
-            class=" rounded-md px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
             name="mentoremail">
         </div>
       </div>
@@ -37,7 +37,7 @@
         </div>
         <div class="input-group mb-3 flex">
           <input type="password" formControlName="password" placeholder="Enter Password"
-            class="rounded-md px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
             name="password">
         </div>
       </div>
@@ -51,7 +51,7 @@
         </div>
         <div class="input-group flex">
           <input type="password" placeholder="Re-Enter Password"
-            class="rounded-md px-3 py-2 w-full focus:outline-none focus:ring-2 focus:ring-blue-500"
+            class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
             name="confirmPassword" formControlName="rpwd">
         </div>
         <div class="form-text text-danger" *ngIf="passwordMismatch">
