--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/list/list.component.css
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/list/list.component.css
@@ -1,11 +1,19 @@
+main {
+    width: 100%;
+    min-height: 100vh;
+}
+
 #list-hover:hover{
     background-color: #f3f4f6; 
 }
 #table-div {
+    padding: 0;
+    margin: 0;
     border-radius: 12px;
 }
 
 table {
+    width: 100%;
     border-spacing: 0;
     border-collapse: collapse;
 }
