--- a/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/login/login.component.html
+++ b/Relntern-main-main/FrontEnd/relntern-main/relntern-main/src/app/login/login.component.html
@@ -30,12 +30,12 @@
 
       <form class="mt-8 space-y-6" action="#" method="POST">
         <div>
-          <label class="block text-sm font-medium text-gray-700">Email</label>
+          <label class="font-medium text-gray-700 mr-2">Email</label>
           <div class="input-group mb-3">
             <input
               type="text"
               placeholder="Enter your email"
-              class="w-full"
+              class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
               aria-describedby="basic-addon1"
               [(ngModel)]="username"
               name="something"
@@ -44,14 +44,14 @@
         </div>
 
         <div>
-          <label for="password" class="block text-sm font-medium text-gray-700"
+          <label for="password" class="font-medium text-gray-700 mr-2"
             >Password</label
           >
           <div class="input-group mb-3">
             <input
               type="password"
               placeholder="Enter your password"
-              class="w-full"
+              class="w-full border border-gray-300 rounded-md px-3 py-2 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500"
               aria-describedby="button-addon2"
               [(ngModel)]="password"
               name="something"
